--- a/index.html
+++ b/index.html
@@ -351,12 +351,12 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-2 col-lg-2"><img src="#" alt="" style="width:100%;"></div>
-                                    <div class="col-4 py-2"><img class="mx-auto rounded container1" src="images/l1.png" alt="" style="width:120%; height:100%;"onclick="onClick(this)"></div>
-                                    <div class="col-4 py-2"><img class="mx-auto rounded" src="images/l2.png" alt="" style="width:120%; height:100%;"onclick="onClick(this)"></div>
+                                    <div class="col-4 py-2"><img class="mx-auto rounded container1" src="images/l1.png" alt="" style="width:100%;" onclick="onClick(this)"></div>
+                                    <div class="col-4 py-2"><img class="mx-auto rounded" src="images/l2.png" alt="" style="width:120%; height:120%;"onclick="onClick(this)"></div>
                                     <div class="col-2 col-lg-2"><img src="#" alt="" style="width:100%;"></div>
-                                    <div class="col-4 py-3"><img class="mx-auto rounded" src="images/l3.png" alt="" style="width:120%; height:100%;" onclick="onClick(this)"></div>
-                                    <div class="col-4 py-3"><img class="mx-auto rounded" src="images/l4.png" alt="" style="width:120%; height:100%;" onclick="onClick(this)"></div>
-                                    <div class="col-4 py-3"><img class="mx-auto rounded" src="images/l5.png" alt="" style="width:120%; height:100%;" onclick="onClick(this)"></div>
+                                    <div class="col-4 py-3"><img class="mx-auto rounded" src="images/l3.png" alt="" style="width:120%; height:120%;" onclick="onClick(this)"></div>
+                                    <div class="col-4 py-3"><img class="mx-auto rounded" src="images/l4.png" alt="" style="width:120%; height:120%;" onclick="onClick(this)"></div>
+                                    <div class="col-4 py-3"><img class="mx-auto rounded" src="images/l5.png" alt="" style="width:120%; height:120%;" onclick="onClick(this)"></div>
                                 </div>
                             </div>
                         </div>
