fix navigation scroll, remove backward reveal animation, make gallery images bigger, add flip effect to team, add dots to slider

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
     <!-- About section-->
-    <section class="page-section section-color2 reveal" id="about">
+    <section class="page-section section-color2" id="about">
         <div class="container">
             <div class="text-center reveal">
                 <h2 class="section-heading text-uppercase">About us</h2>
@@ -150,9 +150,9 @@
 
     <!-- Road map section -->
 
-    <section class="page-section reveal" id="road">
+    <section class="page-section" id="road">
         <div class="container">
-            <div class="text-center">
+            <div class="text-center reveal">
                 <h2 class="section-heading text-uppercase">Road map</h2>
                 <svg class="mb-5" width="250" height="5" viewBox="0 0 250 5" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -160,7 +160,7 @@
                 </svg>
                 <h3 class="section-subheading text-muted"></h3>
             </div>
-            <div class="row">
+            <div class="row reveal">
                 <div class=" col-lg-1"></div>
                 <div class="col-12 col-lg-10"><img src="images/map.png" alt="" style="width:100%;"></div>
                 <div class=" col-lg-1"></div>
@@ -190,7 +190,20 @@
                 <div class="col-md-6 col-lg-4 reveal">
                     <div class="team-member">
 
-                        <img class="mx-auto" src="images/milan.PNG" alt="..." style="width:70%; height:70%; " />
+                        <div class="flip-container mx-auto">
+                            <div class="team-member_img">
+                                <div class="back">
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                </div>
+                                <div class="front">
+                                    <img src="images/milan.PNG" alt="..." />
+                                </div>
+                            </div>
+                        </div>
 
                         <h4></h4>
                         <p class="text-muted">Milan</p>
@@ -208,7 +221,20 @@
 
                     <div class="team-member">
 
-                        <img class="mx-auto" src="images/jok.PNG" alt="..." style="width:70%; height:70%;" />
+                        <div class="flip-container mx-auto">
+                            <div class="team-member_img">
+                                <div class="back">
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                </div>
+                                <div class="front">
+                                    <img src="images/jok.PNG" alt="..."/>
+                                </div>
+                            </div>
+                        </div>
 
                         <h4></h4>
                         <p class="text-muted">JOKИ4</p>
@@ -225,7 +251,21 @@
                 <div class="col-md-6 col-lg-4 reveal">
                     <div class="team-member">
 
-                        <img class="mx-auto" src="images/luffy.png" alt="..." style="width:70%; height:70%;" />
+                        <div class="flip-container mx-auto">
+                            <div class="team-member_img">
+                                <div class="back">
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                </div>
+                                <div class="front">
+                                    <img src="images/jok.PNG" alt="..."/>
+                                </div>
+                            </div>
+                        </div>
+
 
                         <h4></h4>
                         <p class="text-muted">Chicken Master</p>
@@ -241,7 +281,21 @@
                 <div class="col-md-6 col-lg-4 reveal">
                     <div class="team-member">
 
-                        <img class="mx-auto" src="images/ttemich.PNG" alt="..." style="width:70%; height:70%;" />
+                        <div class="flip-container mx-auto">
+                            <div class="team-member_img">
+                                <div class="back">
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                </div>
+                                <div class="front">
+                                    <img src="images/ttemich.PNG" alt="..."/>
+                                </div>
+                            </div>
+                        </div>
+
 
                         <h4></h4>
                         <p class="text-muted">ttemich</p>
@@ -257,7 +311,20 @@
                 <div class="col-md-6 col-lg-4 reveal">
                     <div class="team-member">
 
-                        <img class="mx-auto" src="images/anolis.PNG" alt="..." style="width:70%; height:70%;" />
+                        <div class="flip-container mx-auto">
+                            <div class="team-member_img">
+                                <div class="back">
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                </div>
+                                <div class="front">
+                                    <img src="images/anolis.PNG" alt="..."/>
+                                </div>
+                            </div>
+                        </div>
 
                         <h4></h4>
                         <p class="text-muted">Anoli Kras</p>
@@ -271,7 +338,20 @@
                 <div class="col-md-6 col-lg-4 reveal">
                     <div class="team-member">
 
-                        <img class="mx-auto" src="images/salavat.PNG" alt="..." style="width:70%; height:70%;" />
+                        <div class="flip-container mx-auto">
+                            <div class="team-member_img">
+                                <div class="back">
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                    test test test test test test
+                                </div>
+                                <div class="front">
+                                    <img src="images/salavat.PNG" alt="..."/>
+                                </div>
+                            </div>
+                        </div>
 
                         <h4></h4>
                         <p class="text-muted">Salavat</p>
@@ -291,7 +371,7 @@
 
     <!-- Qestions section -->
 
-    <section class="page-section section-color-questions reveal" id="questions">
+    <section class="page-section section-color-questions" id="questions">
         <div class="text-center">
             <h2 class="section-heading text-uppercase">FREQUENTLY ASKED QUESTIONS</h2>
             <svg class="mb-5" width="360" height="5" viewBox="0 0 360 5" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -394,8 +474,8 @@
 
     <!-- ukraine section -->
 
-    <section class="page-section section-color-ukraine reveal" id="ukraine">
-        <div class="text-center">
+    <section class="page-section section-color-ukraine" id="ukraine">
+        <div class="text-center reveal">
             <h2 class="section-heading text-uppercase">Ukraine</h2>
             <svg class="mb-5" width="250" height="5" viewBox="0 0 250 5" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="250" height="5" fill="#F3C936" />
@@ -407,7 +487,7 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-10 col-md-10 col-lg-7">
                     <div class="container">
-                        <div class="row image-gallery">
+                        <div class="row image-gallery reveal">
                             <div class="col-2 col-lg-2"></div>
                             <div class="col-4 py-2">
                                 <a href="images/l1.png">
@@ -443,13 +523,13 @@
                     </div>
                 </div>
                 <div class="col-10 col-md-10 col-lg-5 align-items-center py-3 my-5">
-                    <h3 class="text-center text-lg-start">Main objective or how it works</h3> <br>
-                    <p class="text-center text-lg-start">
+                    <h3 class="text-center text-lg-start reveal">Main objective or how it works</h3> <br>
+                    <p class="text-center text-lg-start reveal">
                         In Lutsk we have some battalions which are not equipped enough, so technically speaking, the
                         country can provide them only with weapons and they asked volunteer centers to support them.
 
                     </p>
-                    <p class="text-center text-lg-start">
+                    <p class="text-center text-lg-start reveal">
                         Basically, we will complete (buy) all the required items on the list, deliver all of them to the
                         foundation center, where soldiers will be equipped. The same for children, we are looking for
                         useful humanitarian aid in EU and provide those in need. This achieves our main goal of helping
@@ -533,7 +613,7 @@
                             </div>
                             <div class="parthner-content">
                                 <span style="font-size: 13pt; font-family: trebuchet ms;">Nice NFT! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                                </span>    
+                                </span>
                                 <p>--</p>
                             </div>
                         </div>
@@ -790,7 +870,7 @@
                             <div class="col-md-3 col-sm-6 my-3">
                                 <a href="#!"><img class="img-fluid img-brand d-block mx-auto" src="images/logo2.png" alt="..." aria-label="" style="width:50%; height:50%;"/></a>
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
