--- a/index.html
+++ b/index.html
@@ -122,11 +122,10 @@
                             alt="..." /></div>
                     <div class="timeline-panel">
                         <div class="timeline-heading">
-                            <h4></h4>
-                            <h4 class="subheading"></h4>
+                            <h4 class="subheading pt-lg-3">Our Appreciation</h4>
                         </div>
                         <div class="timeline-body">
-                            <p class="text-muted pt-lg-5">As a sign of your support, we would like each of you to receive a piece of rebellious Ukrainian soul enclosed in our symbolic NTF collection of storks, they will leave a exciting handprint of our nation in your memory.</p>
+                            <p class="text-muted">As a sign of your support, we would like each of you to receive a piece of rebellious Ukrainian soul enclosed in our symbolic NTF collection of storks, they will leave a exciting handprint of our nation in your memory.</p>
                         </div>
                     </div>
                 </li>
@@ -868,8 +867,8 @@
         </div>
     </section>
         <div class="text-center p-3" style="background-color: rgba(5, 4, 4, 0.2);">
-            © 2022 Copyright:
-            <a class="text-white" href="#">STORK OF FREEDOM</a>
+            © 2022 Copyright: STORK OF FREEDOM
+            <!-- <a class="text-white" href="#">STORK OF FREEDOM</a> -->
         </div>
 
     </footer>
