change files dimentions max-width

--- a/index.html
+++ b/index.html
@@ -477,34 +477,29 @@
                         <div class="row image-gallery reveal">
                             <div class="col-2 col-lg-2"></div>
                             <div class="col-4 py-2">
-                                <a href="images/l1.png">
+                                <a href="images/Full_NFT_5.png">
                                     <img class="mx-auto rounded cursor-clickable" src="images/Full_NFT_5.png" alt="">
-                                    <!--style="width:100%; height:100%;"-->
                                 </a>
                             </div>
                             <div class="col-4 py-2">
-                                <a href="images/l2.png">
+                                <a href="images/Full_NFT_2.png">
                                     <img class="mx-auto rounded cursor-clickable" src="images/Full_NFT_2.png" alt="">
-                                    <!--style="width:100%; height:100%;"-->
                                 </a>
                             </div>
                             <div class="col-2 col-lg-2"></div>
                             <div class="col-4 py-3">
-                                <a href="images/l3.png">
+                                <a href="images/Full_NFT_1.png">
                                     <img class="mx-auto rounded cursor-clickable" src="images/Full_NFT_1.png" alt="">
-                                    <!--style="width:100%; height:100%;"-->
                                 </a>
                             </div>
                             <div class="col-4 py-3">
-                                <a href="images/l4.png">
+                                <a href="images/Full_NFT_3.png">
                                     <img class="mx-auto rounded cursor-clickable" src="images/Full_NFT_3.png" alt="">
-                                    <!--style="width:100%; height:100%;"-->
                                 </a>
                             </div>
                             <div class="col-4 py-3">
-                                <a href="images/l5.png">
+                                <a href="images/Full_NFT_4.png">
                                     <img class="mx-auto rounded cursor-clickable" src="images/Full_NFT_4.png" alt="">
-                                    <!--style="width:100%; height:100%;"-->
                                 </a>
                             </div>
                         </div>
