--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                     test test test test test test
                                 </div>
                                 <div class="front">
-                                    <img src="images/jok.PNG" alt="..."/>
+                                    <img src="images/luffy.PNG" alt="..."/>
                                 </div>
                             </div>
                         </div>
@@ -552,7 +552,8 @@
                             </div>
                             <div class="parthner-content">
                                 <span style="font-size: 13pt; font-family: trebuchet ms;">Nice NFT! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                                </span><p>--</p>
+                                </span>
+                                <p>--</p>
                                 <p>--</p>
                                 <p>---</p>
                                 <p>----</p>
@@ -567,8 +568,11 @@
                             </div>
                             <div class="parthner-content">
                                 <span style="font-size: 13pt; font-family: trebuchet ms;">Nice NFT! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                                </span><p>--</p>
+                                </span>
                                 <p>--</p>
+                                <p>--</p>
+                                <p>---</p>
+                                <p>----</p>
 
                             </div>
                         </div>
@@ -582,7 +586,9 @@
                             </div>
                             <div class="parthner-content">
                                 <span style="font-size: 13pt; font-family: trebuchet ms;">Nice NFT! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                                </span><p>--</p>
+                                </span>
+                                <p>--</p>
+                                <p>--</p>
                                 <p>---</p>
                                 <p>----</p>
                             </div>
@@ -598,6 +604,9 @@
                                 <span style="font-size: 13pt; font-family: trebuchet ms;">Nice NFT! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                                 </span>
                                 <p>--</p>
+                                <p>--</p>
+                                <p>---</p>
+                                <p>----</p>
                             </div>
                         </div>
                     </div>
