--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                     test test test test test test
                                 </div>
                                 <div class="front">
-                                    <img src="images/luffy.PNG" alt="..."/>
+                                    <img src="images/luffy.png" alt="..."/>
                                 </div>
                             </div>
                         </div>
