--- a/index.html
+++ b/index.html
@@ -180,11 +180,11 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
+                                    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
+                                        <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
+                                        <p><b>"Этот проект это то чем я могу гордиться"</b> - <small>Clown</small></p>
+                                    </span>
                                 </div>
                                 <div class="front">
                                     <img src="images/milan.PNG" alt="..." />
@@ -211,11 +211,11 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
+                                    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
+                                        <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
+                                        <p><b>"Этот проект это то чем я могу гордиться"</b> - <small>Clown</small></p>
+                                    </span>
                                 </div>
                                 <div class="front">
                                     <img src="images/jok.PNG" alt="..."/>
@@ -241,14 +241,14 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
+                                    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
+                                        <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
+                                        <p><b>"Этот проект это то чем я могу гордиться"</b> - <small>Clown</small></p>
+                                    </span>
                                 </div>
                                 <div class="front">
-                                    <img src="images/arthur.png" alt="..."/>
+                                    <img src="images/luffy.png" alt="..."/>
                                 </div>
                             </div>
                         </div>
@@ -271,11 +271,11 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
+                                    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
+                                        <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
+                                        <p><b>"Этот проект это то чем я могу гордиться"</b> - <small>Clown</small></p>
+                                    </span>
                                 </div>
                                 <div class="front">
                                     <img src="images/ttemich.PNG" alt="..."/>
@@ -301,11 +301,11 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
+                                    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
+                                        <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
+                                        <p><b>"Этот проект это то чем я могу гордиться"</b> - <small>Clown</small></p>
+                                    </span>
                                 </div>
                                 <div class="front">
                                     <img src="images/anolis.PNG" alt="..."/>
@@ -328,11 +328,11 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
-                                    test test test test test test
+                                    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
+                                        <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
+                                        <p><b>"Этот проект это то чем я могу гордиться"</b> - <small>Clown</small></p>
+                                    </span>
                                 </div>
                                 <div class="front">
                                     <img src="images/salavat.PNG" alt="..."/>
@@ -574,6 +574,23 @@
                                 <p>---</p>
                                 <p>----</p>
 
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="partner-company">
+                            <div class="photo">
+                            <a href="https://www.instagram.com/euphoria_vapeshop_lutsk/"><img
+                                    class="img-fluid img-brand d-block" src="images/logo3.jpg" alt="..."
+                                    aria-label="" /></a>
+                            </div>
+                            <div class="parthner-content">
+                                <span style="font-size: 13pt; font-family: trebuchet ms;">Nice NFT! Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </span>
+                                <p>--</p>
+                                <p>--</p>
+                                <p>---</p>
+                                <p>----</p>
                             </div>
                         </div>
                     </div>
