--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             <div class="team-member_img">
                                 <div class="back">
                                     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small> I'm CEO & Co - Founder of the small project named "Stork of Freedom"</small></p>
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small> I'm CEO & Co - Founder of the small project named "Stork of Freedom".</small></p>
                                         <p><small>I'm responsible for the organization of the workflow, figure out small design tasks and develop this webpage. Together with Milan we search and negotiate with partners.</small></p> 
                                         <p><b>"Shit happens all the time and we learn how to deal with it"</b> - <small>diman.s</small></p>
                                     </span>
@@ -301,9 +301,9 @@
                             <div class="team-member_img">
                                 <div class="back">
                                     ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
-                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>Я являюсь человеком который отвечает за весь Дискорд.</small></p>
-                                        <p><small>В проекте обычно я помогаю прийти к решению проблем и занимаюсь мелкими работами которые нудно выполнять остальным.</small></p> 
-                                        <p><b>"Этот проект это то чем я могу гордиться"</b> - <small>Clown</small></p>
+                                    <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I am an artist and a generator of idea about the Ukrainian symbol - stork.</small></p>
+                                        <p><small>I realize all the ideas with a brush on paper.</small></p> 
+                                        <p><b>"When there is a war and people are dying, you have to do what you do the best. I can draw, so I drew the collection for my country."</b> - <small>Ilona</small></p>
                                     </span>
                                 </div>
                                 <div class="front">
