--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <div class="flip-container mx-auto">
                             <div class="team-member_img">
                                 <div class="back">
-                                    ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+                                    <small>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━</small></p>
                                     <span style="font-size: 11pt; font-family: trebuchet ms;"> <p><small>I am the founder of this project, although I consider it as a friendly family, where everyone's opinion is equal.</small></p>
                                         <p><small>Basically, I'm coming up with all the ideas here and making various content for all of our social networks.</small></p> 
                                         <p><b>„It's not just a job, it's a way of life"</b> - <small>Milan</small></p>
